[package]
authors = ["Joshua Potts <8704475+iamjpotts@users.noreply.github.com>"]
categories = ["authentication", "cryptography"]
description = "Generate htpasswd files"
edition = "2021"
include = [ 
    "**/*.rs",
]
license = "MPL-2.0"
name = "passivized_htpasswd"
repository = "https://github.com/iamjpotts/passivized_htpasswd"
rust-version = "1.68"
version = "0.0.6"

[dependencies]
bcrypt = "0.15"
indexmap = "2.1"
# This uses an older version of the blowfish crate than the current version of bcrypt does,
# but the pwhash author has unreleased commits that update bcrypt.
pwhash = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.9"
